<resources>
    <string name="app_name">Study Better</string>
    <string name="login_message">"Login: "</string>
    <string name="button_login">Login</string>
    <string name="button_register1">Register Now!</string>
    <string name="btn_logout">Log Out</string>
    <string name="username_message">Username</string>
    <string name="password_message">Password</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or register</string>
    <string name="firstname">First Name:</string>
    <string name="firstname_message">e.g John</string>
    <string name="surname">Surname:</string>
    <string name="surname_message">e.g Smith</string>
    <string name="register">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="radio_student">Student</string>
    <string name="radio_tutor">Tutor</string>
    <string name="areyou">Are you a...</string>
    <string name="email">Email address (username):</string>
    <string name="email_message">e.g example@mycit.ie</string>
    <string name="college">College/University:</string>
    <string name="college_message">e.g CIT</string>
    <string name="department">Department:</string>
    <string name="department_message">e.g Computer Science</string>
    <string name="course">Course:</string>
    <string name="course_message">e.g Software Development</string>
    <string name="password">Password:</string>
    <string name="password_hint">e.g ************</string>
    <string name="button_register2">Register</string>
    <string name="button_cancel">Cancel</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="btn_update">Update Profile</string>
    <string name="btn_search">Search</string>
    <string name="btn_groups">Study Groups</string>
    <string name="btn_grinds">View Grinds</string>
    <string name="study_better">Study Better&#8482;</string>
    <string name="grinds">Grinds</string>
    <string name="study_groups">Study Groups</string>
    <string name="search">Search</string>
    <string name="btn_creategrinds">Create Grind</string>
    <string name="grindtitle">Grind Title</string>
    <string name="recurring">Is this session recurring:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="titlemessage">Input descriptive title</string>
    <string name="date">Pick a Date:</string>
    <string name="time">Pick a Time:</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="forgot_password_msg">Please enter your registered email address so we can send your password reset instructions.</string>
    <string name="btn_back">Back</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="cardtitle">Title</string>
    <string name="carddate">Date</string>
    <string name="cardtime">Time</string>
    <string name="cardrecurring">Recurring</string>
    <string name="cardlocation">Location</string>
    <string name="grindlocation">Location:</string>
    <string name="locationmessage">Input where the grind will take place (ie. room number)</string>
    <string name="cardmembers">Members</string>
    <string name="year">Year:</string>
    <string name="yearmessage">e.g Current academic year (text)</string>
    <string name="groupsubjects">Study Group Subjects:</string>
    <string name="subject1">Subject 1</string>
    <string name="subject2">Subject 2</string>
    <string name="subject3">Subject 3</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="join">Join</string>
    <string name="send_study_request">Send Study Group Request</string>
    <string name="existng">Choose from Existing</string>
    <string name="new_study">Set up New Study Group</string>
    <string name="btn_send">Send Request</string>
    <string name="add">Add member to group</string>
</resources>
