<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.kevdevries.studybetter.CreateGrindsActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/btn_creategrinds"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/grindtitle"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/titlemessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="textPersonName"
            android:hint="@string/titlemessage"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"/>


        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/grindlocation"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/locationmessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:inputType="textPersonName"
            android:hint="@string/locationmessage"
            android:textColor="@android:color/darker_gray"
            android:textColorHint="@android:color/darker_gray"/>


        <TextView
            android:id="@+id/timepicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/time"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"/>

        <TimePicker
            android:id="@+id/timepickermessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner"
            android:layout_gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/date"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"/>

        <DatePicker
            android:id="@+id/datepickermessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:calendarTextColor="@android:color/holo_red_light"
            android:startYear="2018"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            />

        <TextView
            android:id="@+id/recurring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/recurring"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"/>

        <RadioGroup
            android:id="@+id/radioType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioStudent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:checked="false" />

            <RadioButton
                android:id="@+id/radioTutor"
                android:layout_width="0dp"
                android:layout_weight="10"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:checked="true"/>

        </RadioGroup>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/button_register2"
            app:layout_constraintTop_toBottomOf="@id/radioType" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/button_cancel" />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
</ScrollView>

